# airprompt

./: .gitignore  README.md  pyproject.toml
docs/: FLOW.md
src/airprompt/: __init__.py  attachments.py  audio_io.py  feedback.py  llm.py  logging_setup.py  main.py  orchestrator.py  personality.py  stt.py  tts.py  vad.py
src/airprompt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/airprompt/personalities/: interviewer.md
